--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bugsnag/js": "^7.18.0",
+    "@bugsnag/plugin-react": "^7.18.0",
+    "@project-serum/anchor": "^0.25.0",
+    "@solana-mobile/wallet-adapter-mobile": "^0.9.8",
+    "@solana/buffer-layout": "^4.0.0",
+    "@solana/spl-token": "^0.3.6",
+    "@solana/wallet-adapter-base": "^0.9.19",
+    "@solana/wallet-adapter-react": "^0.15.25",
+    "@solana/wallet-adapter-react-ui": "^0.9.23",
+    "@solana/wallet-adapter-wallets": "^0.19.6",
+    "@solana/web3.js": "^1.66.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,10 +21,21 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^1.2.0",
+    "daisyui": "^2.42.1",
+    "mixpanel-browser": "^2.45.0",
     "react": "^18.2.0",
+    "react-daisyui": "^2.4.6",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "recoil": "^0.7.6",
+    "styled-components": "^5.3.6",
+    "tailwindcss": "^3.2.4",
+    "tweetnacl": "^1.0.3",
     "typescript": "^4.4.2",
+    "use-async-effect": "^2.2.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
