--- a/package.json
+++ b/package.json
@@ -21,20 +21,29 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "assert": "^2.0.0",
     "axios": "^1.2.0",
+    "crypto-browserify": "^3.12.0",
     "daisyui": "^2.42.1",
+    "https-browserify": "^1.0.0",
     "mixpanel-browser": "^2.45.0",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-daisyui": "^2.4.6",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.4",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.4.2",
+    "url": "^0.11.0",
     "use-async-effect": "^2.2.7",
     "web-vitals": "^2.1.0"
   },
