skeleton web3 boilerplate working

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "crypto": ["node_modules/crypto-browserify"],
       "stream": ["node_modules/readable-stream"]
