--- a/package.json
+++ b/package.json
@@ -21,13 +21,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "assert": "^2.0.0",
     "axios": "^1.2.0",
-    "crypto-browserify": "^3.12.0",
     "daisyui": "^2.42.1",
-    "https-browserify": "^1.0.0",
     "mixpanel-browser": "^2.45.0",
-    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-daisyui": "^2.4.6",
     "react-dom": "^18.2.0",
@@ -37,20 +33,18 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
+    "stream": "^0.0.2",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.4",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.4.2",
-    "url": "^0.11.0",
     "use-async-effect": "^2.2.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -70,5 +64,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   }
 }
