--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "react-daisyui": "^2.4.6",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.7.1",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
+    "sass": "^1.56.1",
     "stream": "^0.0.2",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.4",
